Add SecurityUtils